<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>net.bodz</groupId>
        <artifactId>parent</artifactId>
        <version>1-SNAPSHOT</version>
        <relativePath></relativePath>
    </parent>
    <groupId>net.bodz.lily</groupId>
    <artifactId>project</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <packaging>pom</packaging>
    <dependencyManagement>
        <dependencies>
        </dependencies>
    </dependencyManagement>
    <dependencies>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>
    <modules>
        <module>layer-1</module>
        <module>layer-2</module>
        <module>layer-3</module>
        <module>layer-5</module>
        <module>build</module>
    </modules>
    <properties>
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>
        <bas.version>2.0.0-SNAPSHOT</bas.version>
    </properties>

    <name>Lily WebApp Framework</name>
    <url>http://lily.bodz.net/</url>
    <inceptionYear>2013</inceptionYear>
    <developers>
        <developer>
            <id>lenik</id>
            <name>Lenik (谢继雷)</name>
            <email>lenik@bodz.net</email>
            <roles>
                <role>Project Leader</role>
            </roles>
            <timezone>GMT+8</timezone>
        </developer>
    </developers>

    <scm>
        <connection>scm:git:ssh://git.bodz.net/repos/git/jazz.git</connection>
    </scm>
</project>
